# kv-system

./: .dockerignore  Cargo.toml  README.md  cert.conf  cert1.pem  cert2.pem  docker-compose.yml  key1.pem  key2.pem  requests.http
.github/workflows/: general.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/configuration/: base.yml  local.yml
backend/src/: config.rs  lib.rs  main.rs
backend/tests/: backend_tests.rs
frontend/: Cargo.toml  Dockerfile  build.rs
frontend/configuration/: base.yml  local.yml  production.yml
frontend/src/: client.rs  config.rs  lib.rs  main.rs
frontend/tests/: frontend_tests.rs
proto/: key_value.proto
