[package]
name = "backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"


[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "1.8.0", features = ["v4"] }
config = "0.14.0"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio-stream = { version = "0.1.5", features = ["net"] }

[build-dependencies]
tonic-build = "0.11.0"
