[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "frontend"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.4"
config = "0.14.0"
openssl = "0.10.64"

[dev-dependencies]
reqwest = { version = "0.12.0", features = ["json"] }
serde_json = "1.0.114"
tonic-build = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
